<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/happyImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/happy" />

        <ImageView
            android:id="@+id/sadImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toEndOf="@+id/happyImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sad" />

        <TextView
            android:id="@+id/happyTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="24dp"
            android:text="@string/happyTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/happyImage" />

        <TextView
            android:id="@+id/sadTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="80dp"
            android:text="@string/sadTotal"
            app:layout_constraintBaseline_toBaselineOf="@+id/happyTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/happyTotal" />

        <TextView
            android:id="@+id/angryTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:text="@string/angryTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/angryImage" />

        <TextView
            android:id="@+id/sickTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="60dp"
            android:text="@string/sickTotal"
            app:layout_constraintBaseline_toBaselineOf="@+id/angryTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toEndOf="@+id/angryTotal" />

        <TextView
            android:id="@+id/nothingTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nothingTotal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.258"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nothingImage"
            app:layout_constraintVertical_bias="0.062" />

        <ImageView
            android:id="@+id/sickImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/angryImage"
            app:layout_constraintTop_toBottomOf="@+id/sadTotal"
            app:srcCompat="@drawable/sick" />

        <ImageView
            android:id="@+id/nothingImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/angryTotal"
            app:srcCompat="@drawable/nothing" />

        <ImageView
            android:id="@+id/angryImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/happyTotal"
            app:srcCompat="@drawable/angry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>